--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <title>Prototype 001 - Startpage</title>
 <body>
 
-<h1>Prototype 001 - Startpage</h1>
+  <div id="app">
+    <h1>Prototype 001 - Startpage</h1>
+    <p>Follow the plan!</p>
+    {{ message }}
+  </div>
 
-<p>Follow the plan!</p>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="app.js"></script>
 
 </body>
 </html>
