--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <body>
 
   <div id="app">
-    <h1>Prototype 001 - Startpage</h1>
-    <p>Follow the plan!</p>
-    {{ message }}
+    <h1>{{ message }}</h1>
+    <p>{{ submessage }}</p>  
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
